2005-01-04  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Expanded the documentation (it should now describe all
          public procedures)
        * Expanded the tests (not complete, but it should cover most
          more complicated procedures)
        * Expanded the set of procedures (only a few algorithms
          await implementation)

2005-01-03  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Added modified Gram-Schmidt method to the linear algebra package

2004-12-06  Arjen Markus <arjenmarkus@users.sourceforge.net>
    
        * Fixed bug in rungeKuttaStep (calculus.tcl) found by Mark Stucky.
          (Also moved the empty lines upward to better reflect the steps)

2004-11-25  Andreas Kupries <andreask@activestate.com>

	* linalg.man: Fixed a formatting bug in the file, found by a
	  regular run of the SAK tool.

2004-11-25  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added descriptions of various linear algebra procedures
        * Updated the code and expanded test cases

2004-11-22  Andreas Kupries <andreask@activestate.com>

	* rational_funcs.tcl: Removed bad source'ing of file
	  polynomials.tcl. Depended on current working directory in the
	  right place, and superfluous as well, as immediately after a
	  'package require' of the package loaded it in the proper
	  manner. Disabled the test code at the end as well.

2004-11-08  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Added preliminary versions of a linear algebra module
          (revision of Hume's LA). No documentation yet
        * Removed the initialisation of CDF (that was left in there)

2004-11-01  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * Moved initialisation of CDF in statistics module to 
          first call

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 
