@@ -295,6 +295,30 @@ test rotate-1.1 "rotate - over 180 degrees" -body {
     rotate -1 0 $v1 $v2
 } -result {{-1 -2 -3 -4 -5 -6} {-7 -8 -9 -10 -11 -12}}
 
+test matmul-1.0 "multiply matrix - vector" -match numbers -body {
+    set v1 {1 2 3}
+    set m  {{0 0 1} {0 5 0} {-1 0 0}}
+    matmul $m $v1
+} -result {3 10 -1}
+
+test matmul-1.1 "multiply vector - matrix" -match numbers -body {
+    set v1 {1 2 3}
+    set m  {{0 0 1} {0 5 0} {-1 0 0}}
+    matmul $v1 $m
+} -result {-3 10 1}
+
+test matmul-1.2 "multiply matrix - matrix" -match numbers -body {
+    set m1 {{0 0 1} {0 5 0} {-1 0 0}}
+    set m2 {{0 0 1} {1 5 1} {-1 0 0}}
+    matmul $m1 $m2
+} -result {{-1 0 0} {5 25 5} {0 0 -1}}
+
+test matmul-1.3 "multiply vector - vector" -match numbers -body {
+    set v1 {1 2 3}
+    set v2 {4 5 6}
+    matmul $v1 $v2
+} -result {{4 5 6} {8 10 12} {12 15 18}}
+
 test solve-1.1 "solveGauss - 2x2 matrix" -match numbers -body {
     set b {{2 3} {-2 3}}
     set M {{2 3} {-2 3}}
